Implement book category api
